# 250730-fastmcp-study

./: README.md  main.py  pyproject.toml
.cursor/rules/: CODE_OF_CONDUCT.mdc
projects/http-server/: README.md  main.py  pyproject.toml
projects/mcp-shared/: README.md  pyproject.toml
projects/mcp-shared/src/mcp_shared/: __init__.py  middleware.py  prompts.py  tools.py
projects/stdio-server/: README.md  main.py  pyproject.toml
